--- a/Lecturas/Definicion de conceptos.html
+++ b/Lecturas/Definicion de conceptos.html
@@ -25,20 +25,13 @@
     		<nav>
               <ul class="menu">
                 <li><a href="index.html" class="menu">Inicio</a></li>
-                <li><a href="lecturas.html" class="menu">Lecturas</a>
-                    <ul>
-                      <li><a href="Definicion de conceptos.html" class="menu">Definición de Conceptos</a></li>
-                      <li><a href="Tipos y Modelos de Bases de Datos.html" class="menu">Tipos y modelos</a></li>
-                      <li><a href="Lenguajes.html" class="menu">Lenguajes</a></li>
-                    </ul>
-                </li>
-
+                <li><a href="lecturas.html" class="menu">Lecturas</a></li>
                 <li><a href="multimedia.html" class="menu">Multimedia</a></li>
                 <li><a href="actividades.html" class="menu">Actividades</a></li>
                 <li><a href="autores.html" class="menu">Autores</a></li>
                 <div id="apDiv19">
                 <center>
-                  <div id="cuentavisitas"></div>
+                	<div id="cuentavisitas"></div>
 						<script>yu=function(id){return document.getElementById(id);}
 							if(localStorage){
 							if(localStorage['visitas']==undefined){
@@ -73,13 +66,13 @@
     <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
                 <article>
                     <figure>
-                        <img src="img/diseno_web.jpg" alt="Diseno">
+                        <img src="img/administracion_bases1.jpg" alt="Diseno">
                   	</figure>
                     <p>
-                        Propósitos del curso:<br>
-                        • Que el estudiante se fundamente teóricamente sobre las generalidades básicas del Diseño Web.<br>
-                        • Que el estudiante pueda utilizar de forma correcta los lenguajes HTML5 y CSS3 para aplicarlos en la solución de problemas de construcción de Sitios Web.<br>
-                        • Que el estudiante implemente servicios y sitios web a través de los sistemas gestores de contenidos CMS y LMS libres más usados en la actualidad.<br>
+                        Lecturas e información de Administración de Bases de Datos:<br>
+                        • Definición de Bases de Datos.<br>
+                        • Tipos y Modelos de Bases de Datos.<br>
+                        • Lenguajes Utilizados en la Bases de Datos.<br>
                     </p>
       			</article>
     </section>
