--- a/index.html
+++ b/index.html
@@ -25,7 +25,14 @@
     		<nav>
               <ul class="menu">
                 <li><a href="index.html" class="menu">Inicio</a></li>
-                <li><a href="lecturas.html" class="menu">Lecturas</a></li>
+                <li><a href="lecturas.html" class="menu">Lecturas</a>
+                    <ul>
+                      <li><a href="Definicion de conceptos.html" class="menu">Definición de Conceptos</a></li>
+                      <li><a href="Tipos y Modelos de Bases de Datos.html" class="menu">Tipos y modelos</a></li>
+                      <li><a href="Lenguajes.html" class="menu">Lenguajes</a></li>
+                    </ul>
+                </li>
+
                 <li><a href="multimedia.html" class="menu">Multimedia</a></li>
                 <li><a href="actividades.html" class="menu">Actividades</a></li>
                 <li><a href="autores.html" class="menu">Autores</a></li>
