--- a/lecturas.html
+++ b/lecturas.html
@@ -16,7 +16,7 @@
         <Div id="contenidos">
             <header>
                 <div id="apDiv1"><img src="img/banner.jpg" width="1000" height="168">
-                  <div id="apDiv24">OVA Para curso xxxxxxxx - Tecnología en Desarrollo de Software</div>
+                  <div id="apDiv24">OVA Para curso Administración base de datos - Tecnología en Desarrollo de Software</div>
               </div>
             </header>
         	<p>&nbsp;</p>
@@ -25,13 +25,20 @@
     		<nav>
               <ul class="menu">
                 <li><a href="index.html" class="menu">Inicio</a></li>
-                <li><a href="lecturas.html" class="menu">Lecturas</a></li>
+                <li><a href="lecturas.html" class="menu">Lecturas</a>
+                    <ul>
+                      <li><a href="Definicion de conceptos.html" class="menu">Definición de Conceptos</a></li>
+                      <li><a href="Tipos y Modelos de Bases de Datos.html" class="menu">Tipos y modelos</a></li>
+                      <li><a href="Lenguajes.html" class="menu">Lenguajes</a></li>
+                    </ul>
+                </li>
+
                 <li><a href="multimedia.html" class="menu">Multimedia</a></li>
                 <li><a href="actividades.html" class="menu">Actividades</a></li>
                 <li><a href="autores.html" class="menu">Autores</a></li>
                 <div id="apDiv19">
                 <center>
-                	<div id="cuentavisitas"></div>
+                  <div id="cuentavisitas"></div>
 						<script>yu=function(id){return document.getElementById(id);}
 							if(localStorage){
 							if(localStorage['visitas']==undefined){
@@ -62,17 +69,20 @@
              </nav>
             <div id="apDiv14"><a href="https://campus0a.unad.edu.co/campus0/login/index.php" target="_blank"><img src="img/campus.png" width="116" height="101"></a>									</div>
     <section>
-    <h2>Diseño de Sitios Web - UNAD ECBTI</h2>
-    <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
+    <h2>Lecturas Administración de bases de datos</h2>
+    <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0"/></a></div>
                 <article>
                     <figure>
                         <img src="img/administracion_bases1.jpg" alt="Diseno">
                   	</figure>
                     <p>
-                        Lecturas e información de Administración de Bases de Datos:<br>
-                        • Definición de Bases de Datos.<br>
-                        • Tipos y Modelos de Bases de Datos.<br>
-                        • Lenguajes Utilizados en la Bases de Datos.<br>
+                      En esta página encontrará información relevante y de utilidad para el aprendizaje y comprensión de términos 
+                      y conceptos relacionados con el tema “Administración de bases de datos”<br>
+
+                      Partiremos desde la <a href="Definicion de conceptos.html"> definición de Bases de datos</a> básica para ir profundizando en lo que este tipo de almacenamiento 
+                      de información conlleva, conoceremos los diferentes <a href="Tipos y Modelos de Bases de Datos.html"> tipos y modelos de Bases de datos</a> que se usan en la actualidad 
+                      y su utilidad. También encontraran información sobre los <a href="Lenguajes.html"> lenguajes utilizados en la Bases de datos</a> de datos para su manejo y gestionamiento. <br>
+             
                     </p>
       			</article>
     </section>
