--- a/Lenguajes.html
+++ b/Lenguajes.html
@@ -2,7 +2,7 @@
 <html lang="es" class"no-js">
     <!-- comentario  -->
     <head>
- 		<meta charset="UTF-8">
+    <meta charset="UTF-8">
         <meta content="mauricio perdomo" name="author"/>
         <meta content="Pagina de curso de Disenos de Sitios Web" name="description" />
         <meta content="EDUCACION, UNAD, INGENIERIA, SISTEMAS, DISENO, OVA, CURSO, WEB" name="keywords" />
@@ -12,17 +12,17 @@
         <link href='http://fonts.googleapis.com/css?family=arial' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/style.css">
      </head>
-    <body>	
+    <body>  
         <Div id="contenidos">
             <header>
                 <div id="apDiv1"><img src="img/banner.jpg" width="1000" height="168">
-                  <div id="apDiv24">OVA Para curso xxxxxxxx - Tecnología en Desarrollo de Software</div>
+                  <div id="apDiv24">OVA Para curso Administración base de datos - Tecnología en Desarrollo de Software</div>
               </div>
             </header>
-        	<p>&nbsp;</p>
-   			<p>&nbsp;</p>
+          <p>&nbsp;</p>
+        <p>&nbsp;</p>
             <p>&nbsp;</p>
-    		<nav>
+        <nav>
               <ul class="menu">
                 <li><a href="index.html" class="menu">Inicio</a></li>
                 <li><a href="lecturas.html" class="menu">Lecturas</a>
@@ -39,20 +39,20 @@
                 <div id="apDiv19">
                 <center>
                   <div id="cuentavisitas"></div>
-						<script>yu=function(id){return document.getElementById(id);}
-							if(localStorage){
-							if(localStorage['visitas']==undefined){
-							localStorage['visitas']=0;
-							}var n=parseInt(localStorage['visitas']);localStorage['visitas']=1+n;
-							var num=localStorage['visitas'];
-							var mensaje=num + " visitas";
-							 yu('cuentavisitas').innerHTML=mensaje;}
+            <script>yu=function(id){return document.getElementById(id);}
+              if(localStorage){
+              if(localStorage['visitas']==undefined){
+              localStorage['visitas']=0;
+              }var n=parseInt(localStorage['visitas']);localStorage['visitas']=1+n;
+              var num=localStorage['visitas'];
+              var mensaje=num + " visitas";
+               yu('cuentavisitas').innerHTML=mensaje;}
                         </script>
                 </center></div>
-                <div id="apDiv4"><a id="l1" target="_blank" rel="nofollow" href="https://www.facebook.com/Universidad-Nacional-Abierta-y-a-Distancia-UNAD-285790428108305/"><img title="Facebook"border="0" src="img/facebook_aqu_32.png" alt="Facebook" /></a><a href="https://www.youtube.com/user/universidadunad" target="_blank"><img src="img/youtube.png" alt="YouTube" title="Twitter" border="0" /></a><span class="nsb_container"><a href="https://twitter.com/UniversidadUNAD" target="_blank"><img src=			 "img/twitter_aqu_32.png" class="menu" title="Twitter" border="0" /></a></span></div> 
+                <div id="apDiv4"><a id="l1" target="_blank" rel="nofollow" href="https://www.facebook.com/Universidad-Nacional-Abierta-y-a-Distancia-UNAD-285790428108305/"><img title="Facebook"border="0" src="img/facebook_aqu_32.png" alt="Facebook" /></a><a href="https://www.youtube.com/user/universidadunad" target="_blank"><img src="img/youtube.png" alt="YouTube" title="Youtube" border="0" /></a><span class="nsb_container"><a href="https://twitter.com/UniversidadUNAD" target="_blank"><img src=      "img/twitter_aqu_32.png" class="menu" title="Twitter" border="0" /></a></span></div> 
               </ul>
                  <div id="apDiv3">    
-               	   <form method="get" action="http://www.google.es/search">
+                   <form method="get" action="http://www.google.es/search">
                     <input type="hidden" name="ie" value="UTF-8" />
                     <input type="hidden" name="oe" value="UTF-8" />
                     <input type="text" id="s" name="q" value="" size="12" />
@@ -67,21 +67,20 @@
                    </form>
                 </div>
              </nav>
-            <div id="apDiv14"><a href="https://campus0a.unad.edu.co/campus0/login/index.php" target="_blank"><img src="img/campus.png" width="116" height="101"></a>									</div>
+            <div id="apDiv14"><a href="https://campus0a.unad.edu.co/campus0/login/index.php" target="_blank"><img src="img/campus.png" width="116" height="101"></a>                  </div>
     <section>
-    <h2>Diseño de Sitios Web - UNAD ECBTI</h2>
+    <h2>Lenguajes y Modelos de bases de datos</h2>
     <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
                 <article>
                     <figure>
-                        <img src="img/diseno_web.jpg" alt="Diseno">
-                  	</figure>
+                        <img src="img/lenguajes.jpg" alt="lenguajes">
+                    </figure>
                     <p>
-                        Propósitos del curso:<br>
-                        • Que el estudiante se fundamente teóricamente sobre las generalidades básicas del Diseño Web.<br>
-                        • Que el estudiante pueda utilizar de forma correcta los lenguajes HTML5 y CSS3 para aplicarlos en la solución de problemas de construcción de Sitios Web.<br>
-                        • Que el estudiante implemente servicios y sitios web a través de los sistemas gestores de contenidos CMS y LMS libres más usados en la actualidad.<br>
+                    En la actualidad el tipo de base de datos que se utiliza por excelencia es la Base de Datos Relacional que se usa para modelar problemas reales y administrar datos dinámicamente. <br>
+                    A partir de la creación de este tipo de bases de datos surgió un tipo de lenguaje para accesar y modificar los datos de este tipo de bases, SQL (Structured Query Language o Lenguaje Estructurado de Consultas). <br>
+                    De esta manera existe una serie de versiones (por decirlo de alguna manera) de SQL a lo largo de la historia de las bases de datos:<br>
                     </p>
-      			</article>
+            </article>
     </section>
     <aside> 
                 <div id="apDiv5">
@@ -90,21 +89,21 @@
                 <div id="apDiv6"><span style="text-align: justify;">
                 <iframe src='js/slider.html' width='260' height='180' frameborder='0'></iframe>    
                 </span>
-      			</div>
-              	<div id="apDiv7">
+            </div>
+                <div id="apDiv7">
                 <div id="apDiv12">Ubicación Sede Nacional</div>
-      			</div>
-      			<div id="apDiv8"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15908.191419159031!2d-74.0975768!3d4.5854329!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc1c38a35fe03bf87!2sUNAD+UNIVERSIDAD+NACIONAL+ABIERTA+Sede+Jos%C3%A9+Celestino+Mutis!5e0!3m2!1ses!2sco!4v1475599261440" width="260" height="180" frameborder="0" style="border:0" allowfullscreen></iframe></div>
+            </div>
+            <div id="apDiv8"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15908.191419159031!2d-74.0975768!3d4.5854329!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc1c38a35fe03bf87!2sUNAD+UNIVERSIDAD+NACIONAL+ABIERTA+Sede+Jos%C3%A9+Celestino+Mutis!5e0!3m2!1ses!2sco!4v1475599261440" width="260" height="180" frameborder="0" style="border:0" allowfullscreen></iframe></div>
               <div id="apDiv15"></div>
               <div id="apDiv16">Nuestra ECBTI</div>
       <div id="apDiv18"><iframe width="260" height="180" src="https://www.youtube.com/embed/Z-rfSPH3ZQA" frameborder="0" allowfullscreen></iframe></div>
-    	</aside>
-		<Footer>
+      </aside>
+    <Footer>
           <div id="apDiv25">Para uso de la Universidad Nacional Abierta y a Distancia UNAD</div>
           <div id="apDiv26">Elaborado por: Luis Fernando Jaramillo Hernández, estudiante del programa Ing. de Sistemas </div>
-		  <div id="apDiv13"><img src="img/logoUNADgrisInferior.png" width="225" height="41"></div>
-		  <div id="apDiv27">CEAD Dosquebradas - 2016</div>
-    	</Footer>
+      <div id="apDiv13"><img src="img/logoUNADgrisInferior.png" width="225" height="41"></div>
+      <div id="apDiv27">CEAD Dosquebradas - 2016</div>
+      </Footer>
    </body>
     <script src="js/modernizr.js"></script>   
     <script src="js/prefixfree.min.js"></script>
