--- a/autores.html
+++ b/autores.html
@@ -23,10 +23,17 @@
         <p>&nbsp;</p>
             <p>&nbsp;</p>
 
-        <nav>
+       <nav>
               <ul class="menu">
                 <li><a href="index.html" class="menu">Inicio</a></li>
-                <li><a href="lecturas.html" class="menu">Lecturas</a></li>
+                <li><a href="lecturas.html" class="menu">Lecturas</a>
+                    <ul>
+                      <li><a href="Definicion de conceptos.html" class="menu">Definición de Conceptos</a></li>
+                      <li><a href="Tipos y Modelos de Bases de Datos.html" class="menu">Tipos y modelos</a></li>
+                      <li><a href="Lenguajes.html" class="menu">Lenguajes</a></li>
+                    </ul>
+                </li>
+
                 <li><a href="multimedia.html" class="menu">Multimedia</a></li>
                 <li><a href="actividades.html" class="menu">Actividades</a></li>
                 <li><a href="autores.html" class="menu">Autores</a></li>
@@ -99,10 +106,9 @@
                         <p>
                         <img src="img/Bryan.png" alt="Cristian" width="140" height="145" align="right">
                         • NOMBRE: Bryan Steve Gutierrez:<br>
-                        • CODIGO: <br>
+                        • CODIGO: 1.014.202.704<br>
                         • PROGRAMA: Ingenieria de Sistemas<br>
-                        • CORREO: <br>
-                        • SKYPE: <br>
+                        • SKYPE: bryan.gutierg <br>
                     </p>
             </article>
     </section>
