--- a/Tipos y Modelos de Bases de Datos.html
+++ b/Tipos y Modelos de Bases de Datos.html
@@ -16,7 +16,7 @@
         <Div id="contenidos">
             <header>
                 <div id="apDiv1"><img src="img/banner.jpg" width="1000" height="168">
-                  <div id="apDiv24">OVA Para curso Administración base de datos - Tecnología en Desarrollo de Software</div>
+                  <div id="apDiv24">Lecturas Administración de bases de datos - Tipos y modelos de BD</div>
               </div>
             </header>
           <p>&nbsp;</p>
@@ -75,10 +75,42 @@
                     <figure>
                         <img src="img/tipos de bases.jpg" alt="Tipos de bases">
                     </figure>
-                    <p>
+
+                    <h2>Tipos bases de datos </h2>
+                      <h4>Bases de datos Estáticas</h4>
+                        <p>
+                          Son bases de datos únicamente de lectura, utilizadas primordialmente para almacenar datos históricos que posteriormente se pueden utilizar para estudiar el comportamiento de un conjunto de datos a través del tiempo, realizar proyecciones, tomar decisiones y realizar análisis de datos para inteligencia empresarial. un ejemplo de este seria bibliotecas y  periódicos.<br>
+                        </p>
+                      <h4>Bases de datos Dinámicas</h4>
+                        <p>
+                        Éstas son bases de datos donde la información almacenada se modifica con el tiempo, permitiendo operaciones como actualización, borrado y adición de datos, además de las operaciones fundamentales de consulta. Un ejemplo de esto puede ser la base de datos utilizada en un sistema de información de un supermercado, una farmacia, un videoclub o una empresa.<br>
+                        </p>
+                  <h2>Modelos  bases de datos </h2>
+                     <p>
                       Además de la clasificación por la función de las bases de datos, éstas también se pueden clasificar de acuerdo a su modelo de administración de datos.<br>
-                      
                       Un modelo de datos es básicamente una "descripción" de algo conocido como contenedor de datos (algo en donde se guarda la información), así como de los métodos para almacenar y recuperar información de esos contenedores. Los modelos de datos no son cosas físicas: son abstracciones que permiten la implementación de un sistema eficiente de base de datos; por lo general se refieren a algoritmos, y conceptos matemáticos.<br>
+                      </p>
+                    <iframe id="iframe_container" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" width="550" height="400" src="https://prezi.com/embed/yexzzedtnf0-/?bgcolor=ffffff&amp;lock_to_path=0&amp;autoplay=0&amp;autohide_ctrls=0&amp;landing_data=bHVZZmNaNDBIWnNjdEVENDRhZDFNZGNIUE1vclg3WVBhUlA2cmZHU3h6dUd2VEVRTlBtY2dZVmdyaS9NZHp4Q1NpZz0&amp;landing_sign=XS-VD_pF6S3-o1Vfra7NCM53c0mDCK7kOX7K0E2Adcc"></iframe>
+                    
+                    <h2>Otros tipos de Bases de datos:</h2>
+                      <h4>Bases de datos Deductiva</h4>
+                       <p>
+                         Es un sistema de base de datos que permite hacer deducciones a través de inferencias. Se basa principalmente en reglas y hechos que son almacenados en la base de datos. También las bases de datos deductivas son llamadas base de datos lógica, a raíz de que se basan en lógica matemática.<br>
+                         Ejemplo: <br>           
+                      </p>
+                      <img src="img/deductiva.jpg" alt="Deductiva">
+                      <h4>Bases de datos documentales</h4>
+                        <p>
+                         En este grupo, cada registro se corresponde con un documento, sea éste de cualquier tipo: una publicación impresa, un documento audiovisual, gráfico o sonoro, un documento de archivo, un documento electrónico.<br>
+                         Estos recursos electrónicos pueden ser consultables directamente en formato electrónico o ser utilizados para elaborar productos impresos: bibliografías, directorios, informes. Los registros de las bases de datos documentales pueden incluir o no el contenido completo de los documentos que describen.<br>
+                         Una biblioteca por ejemplo:<br>
+                        </p>
+                      <img src="img/documental.gif" alt="Documental">
+                    <p> 
+                      Recuperado de:<br>
+                       <a href="https://prezi.com/yexzzedtnf0-/tipos-de-bases-de-datos-y-sus-caracteristicas/#">Archivo prezi</a><br>
+                       <a href="http://marcela-basededatos.blogspot.com.co/p/que-son-las-bases-de-datos.html">Modelos BD</a><br>
+                       <a href="https://es.wikipedia.org/wiki/Base_de_datos#Bases_de_datos_est.C3.A1ticas">Tipos BD</a><br>
                     </p>
             </article>
     </section>
